--- a/src/app/votacion/votacion-online/votacion-online.component.html
+++ b/src/app/votacion/votacion-online/votacion-online.component.html
@@ -2,6 +2,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h2>SISTEMA DE VOTACIONES ONLINE</h2>
+      <!--Hola Jara-->
       <h4>SINDICATO SECTOR SALUD</h4>
     </div>
   </section>
