--- a/src/app/votacion/votacion-online/votacion-online.component.html
+++ b/src/app/votacion/votacion-online/votacion-online.component.html
@@ -1,22 +1,27 @@
-<div class="container py-4">
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h2>SISTEMA DE VOTACIONES ONLINE</h2>
-      <!--Hola Jara-->
-      <h4>SINDICATO SECTOR SALUD</h4>
-    </div>
-  </section>
-  <div class="container pt-3">
-    <div class="row justify-content-sm-center">
-      <div class="col-sm-6 col-md-4">
-
-        <form id="loginform">
-          <div class="form-group text-center">
-            <label for="exampleFormControlInput1">Ingrese su DNI</label>
-            <input type="text" class="form-control" (keypress)="onlyNumberKey($event)" maxlength="8" placeholder="DNI" [(formControl)]="dni">
-          </div>
-          <button class="btn btn-lg btn-primary btn-block" (click)="onVotar()">Entrar</button>
-        </form>
+<section class="jumbotron text-center">
+  <div class="container text-white">
+    <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
+    <h4>SISTEMA DE VOTACIONES ONLINE</h4>
+  </div>
+</section>
+<div class="container">
+  <div class="row justify-content-sm-center">
+    <div class="col-sm-6 col-md-4">
+      <div class="card shadow">
+        <div class="card-body py-5">
+          <form id="loginform">
+            <div class="form-group text-center">
+              <label class="texto-v mb-4" for="inlineFormInputGroup">Ingrese su DNI</label>
+              <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">DNI</div>
+                </div>
+                <input type="text" class="form-control" (keypress)="onlyNumberKey($event)" maxlength="8" placeholder="" [(formControl)]="dni">
+              </div>
+            </div>
+            <button class="btn btn-primary btn-block" (click)="onVotar()">Entrar</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
