--- a/src/app/votacion/views/home.component.html
+++ b/src/app/votacion/views/home.component.html
@@ -30,7 +30,7 @@
                 <li class="list-group-item" style=" width: 8%; background-color: darkgray;"></li>
                 <li class="list-group-item text-center" style=" width: 84%;">{{candidato.nombre}}</li>
                 <li class="list-group-item text-center" style=" width: 8%;">
-                  <input type="radio" formControlName="escoger" [value]="candidato.id">
+                  <input type="radio" formControlName="voto" [value]="candidato.id">
                 </li>
               </ul>
 
