--- a/src/app/votacion/votacion-online/votacion-online.component.html
+++ b/src/app/votacion/votacion-online/votacion-online.component.html
@@ -16,7 +16,7 @@
                 <div class="input-group-prepend">
                   <div class="input-group-text">DNI</div>
                 </div>
-                <input type="text" class="form-control" (keypress)="onlyNumberKey($event)" maxlength="8" placeholder="" [(formControl)]="dni">
+                <input type="text" class="form-control" (keypress)="onlyNumberKey($event)" maxlength="8" placeholder="" [formControl]="dni">
               </div>
             </div>
             <button class="btn btn-primary btn-block" (click)="onVotar()">Entrar</button>
