--- a/src/app/votacion/views/home.component.html
+++ b/src/app/votacion/views/home.component.html
@@ -1,4 +1,4 @@
-<div class="container py-4">
+<div class="container">
   <section class="jumbotron text-center" style="padding: 8px 8px 8px 8px;">
     <div class="container">
       <h2>SISTEMA DE VOTACIONES ONLINE</h2>
