--- a/src/assets/estilos/votaciones.css
+++ b/src/assets/estilos/votaciones.css
@@ -29,3 +29,7 @@ input:focus, input.form-control:focus {
     font-weight: 600;
     font-size: 20px;
 } 
+
+::placeholder {
+    font-size: 12px;
+}
