--- a/src/app/votacion/views/home.component.html
+++ b/src/app/votacion/views/home.component.html
@@ -1,16 +1,15 @@
 <div class="container">
-  <section class="jumbotron text-center" style="padding: 8px 8px 8px 8px;">
-    <div class="container">
-      <h2>SISTEMA DE VOTACIONES ONLINE</h2>
-      <h4>SINDICATO SECTOR SALUD</h4>
-      <p>
-        <button type="button" class="btn btn-light" (click)="onLogout()">Salir</button>
-      </p>
+  <section class="jumbotron text-center">
+    <div class="container text-white">
+      <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
+      <h4>SISTEMA DE VOTACIONES ONLINE</h4>
+      <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir sin votar</button>
     </div>
   </section>
-  <ul>
-    <li>Haga click en el nombre del Partido Político para ver sus candidatos.</li>
-    <li>Seleccione su candidato.</li>
+  <ul class="indicaciones-voto mb-4">
+    <li type="square">Clic en el nombre del Partido Político o en <small><i class="fa fa-plus-square" aria-hidden="true"></i></small>
+     para ver sus candidatos.</li>
+    <li type="square">Clic en el círculo <small><i class="fa fa-dot-circle-o" aria-hidden="true"></i></small> para seleccionar su candidato preferido y luego clic en el boton "VOTAR".</li>
   </ul>
   <div class="container">
     <form id="votarForm"  [formGroup]="votarForm" (ngSubmit)="onVotar()">
@@ -18,10 +17,10 @@
         <div class="card" *ngFor="let item of lstData; index as i">
           <div class="card-header" id="headingOne">
             <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed text-center" type="button"
+              <button class="btn btn-link btn-block text-left collapsed text-center text-decoration-none text-white" type="button"
                 data-toggle="collapse" [attr.data-target]="'#collapse' + (i+1)" aria-expanded="false"
                 [attr.aria-controls]="'#collapse' + (i+1)">
-                {{item.nombre}}
+                <small class="candidatos"><i class="fa fa-plus-square" aria-hidden="true"></i></small> {{item.nombre}}
               </button>
             </h2>
           </div>
@@ -35,6 +34,9 @@
                   <input type="radio" formControlName="voto" [value]="candidato.id">
                 </li>
               </ul>
+              <div class="text-center">
+                <button type="submit" [disabled]="isVoto" class="btn btn-primary mt-2">Votar</button>
+              </div>
             </div>
           </div>
           <!-- <div class="card" *ngIf="item.nombre === 'VOTOS EN BLANCO' ">
@@ -50,7 +52,9 @@
           </div> -->
         </div>
       </div>
-      <button type="submit" [disabled]="isVoto" class="btn btn-primary btn-lg btn-block mt-5">Votar</button>
+      <!-- <div class="text-center">
+        <button type="submit" [disabled]="isVoto" class="btn btn-primary mt-2">Votar</button>
+      </div> -->
     </form>
   </div>
 </div>
