--- a/src/app/admin/auth/auth.component.html
+++ b/src/app/admin/auth/auth.component.html
@@ -16,7 +16,7 @@
                 <div class="input-group-prepend">
                   <div class="input-group-text"><i class="fa fa-user" aria-hidden="true"></i></div>
                 </div>
-                <input type="text" class="form-control" formControlName="usuario" placeholder="nombre de usuario">
+                <input type="text" class="form-control" formControlName="username" placeholder="nombre de usuario">
               </div>
 
               <div class="input-group mb-2">
