--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
     <div class="container">
       <h2>SISTEMA DE VOTACIONES ONLINE</h2>
       <h4>SINDICATO SECTOR SALUD</h4>
+      <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir</button>
     </div>
   </section>
   <div class="container">
