--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,69 +1,81 @@
 <!-- <p>dashboard works!</p> -->
-<div class="container py-4">
-  <section class="jumbotron text-center" style="padding: 8px 8px 8px 8px;">
-    <div class="container">
-      <h2>SISTEMA DE VOTACIONES ONLINE</h2>
-      <h4>SINDICATO SECTOR SALUD</h4>
-      <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir</button>
+<div class="container">
+  <section class="jumbotron text-center">
+    <div class="container text-white">
+      <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
+      <h4>SISTEMA DE VOTACIONES ONLINE</h4>
+      <button type="button" class="btn btn-warning float-right">Salir</button>
     </div>
   </section>
-  <div class="container">
-    <form id="votarForm" >
-      <div class="accordion" id="accordionExample">
-        <div class="card" *ngFor="let item of lstData; index as i">
-          <div class="card-header" id="headingOne" *ngIf="item.nombre != 'VOTO EN BLANCO'">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed text-center" type="button"
-                data-toggle="collapse" [attr.data-target]="'#collapse' + (i+1)" aria-expanded="false"
-                [attr.aria-controls]="'#collapse' + (i+1)">
-                {{item.nombre}}
-              </button>
-            </h2>
-          </div>
-          <div [attr.id]="'collapse' + (i+1)" class="collapse" aria-labelledby="headingOne"
-            data-parent="#accordionExample">
-            <div class="card-body">
-              <table class="table table-light">
-                <thead class="thead-light">
-                  <tr class="text-center">
-                    <th>Foto</th>
-                    <th>Nombre y Apellidos</th>
-                    <th>Votos</th>
-                  </tr>
-                </thead>
-                <tbody class="text-center">
-                  <tr *ngFor="let candidato of item.candidatos">
-                    <td>Foto</td>
-                    <td>{{ candidato.nombre }}</td>
-                    <td>{{candidato.cantidad}}</td>
-                  </tr>
-                </tbody>
-              </table>
-              <!-- <ul class="list-group list-group-horizontal" *ngFor="let candidato of item.candidatos">
-                <li class="list-group-item" style=" width: 8%; background-color: darkgray;"></li>
-                <li class="list-group-item text-center" style=" width: 84%;">{{candidato.nombre}}</li>
-                <li class="list-group-item text-center" style=" width: 8%;">
-                  {{candidato.cantidad}}
-                </li>
-              </ul> -->
-
-            </div>
-          </div>
-        </div>
-        <!-- <div class="card">
-          <div class="card-header" id="headingThree">
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item" style=" width: 8%;"></li>
-              <li class="list-group-item text-center" style=" width: 84%;">Voto en Blanco</li>
-              <li class="list-group-item text-center" style=" width: 8%;">
-                <input type="radio" formControlName="voto" [value]="-1">
-              </li>
-            </ul>
-          </div>
-        </div> -->
+  <section class="py-4" style="background-color: #fff!important;">
+    <div class="container">
+      <h4 class="text-center">Panel de Administrador</h4>
+      <hr>
+      <p class="mt-5">Candidatos con mayor porcentaje de votos</p>
+      <h6  class="text-center"><b>Aderson Jara</b></h6>
+      <div class="progress mb-3" style="height: 20px;">
+        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><small>50%</small></div>
       </div>
-
-      <!-- <button type="submit" class="btn btn-primary btn-lg btn-block mt-5">Votar</button> -->
-    </form>
-  </div>
+      <h6  class="text-center"><b>Diego Corales</b></h6>
+      <div class="progress mb-3" style="height: 20px;">
+        <div class="progress-bar progress-bar-striped bg-info progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"><small>25%</small></div>
+      </div>
+      <h6  class="text-center"><b>Llauri Drogo</b></h6>
+      <div class="progress mb-5" style="height: 20px;">
+        <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><small>10%</small></div>
+      </div>
+      <hr>
+      <div class="text-center">
+        <p class="mt-2">Reporte</p>
+        <button type="button" class="btn btn-outline-danger btn-sm ml-2">PDF</button>
+        <button type="button" class="btn btn-outline-success btn-sm ml-2">EXCEL</button>
+      </div>
+      <table class="table table-hover mt-4">
+        <thead>
+          <th>#</th>
+          <th>Candidato</th>
+          <th># votos</th>
+          <th>% votos</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Aderson Jara</td>
+            <td>500</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Diego Corales</td>
+            <td>250</td>
+            <td>25%</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Llauri Drogo</td>
+            <td>10</td>
+            <td>10%</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Aderson Jara</td>
+            <td>500</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Diego Corales</td>
+            <td>250</td>
+            <td>25%</td>
+          </tr>
+          <tr>
+            <td>...102</td>
+            <td>Llauri Drogo</td>
+            <td>10</td>
+            <td>10%</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
 </div>
