--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="container text-white">
       <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
       <h4>SISTEMA DE VOTACIONES ONLINE</h4>
-      <button type="button" class="btn btn-warning float-right">Salir</button>
+      <button type="button" class="btn btn-warning float-right" (click)="onLogout()">Salir</button>
     </div>
   </section>
   <section class="py-4" style="background-color: #fff!important;">
@@ -12,70 +12,83 @@
       <h4 class="text-center">Panel de Administrador</h4>
       <hr>
       <p class="mt-5">Candidatos con mayor porcentaje de votos</p>
-      <h6  class="text-center"><b>Aderson Jara</b></h6>
-      <div class="progress mb-3" style="height: 20px;">
-        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><small>50%</small></div>
+
+      <div *ngFor="let item of lstTres">
+        <h6  class="text-center"><b>{{item.nombre}}</b></h6>
+        <div class="progress mb-3" style="height: 20px;">
+          <div class="progress-bar progress-bar-striped bg-info progress-bar-animated"
+          [ngStyle]="{'width': (item.votantes_count /total_votantes) * 100 + '%'}"
+          role="progressbar">{{ (item.votantes_count /total_votantes) * 100 | number : '1.2-2'}}%</div>
+        </div>
       </div>
-      <h6  class="text-center"><b>Diego Corales</b></h6>
+      <!-- <h6  class="text-center"><b>Diego Corales</b></h6>
       <div class="progress mb-3" style="height: 20px;">
         <div class="progress-bar progress-bar-striped bg-info progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"><small>25%</small></div>
-      </div>
-      <h6  class="text-center"><b>Llauri Drogo</b></h6>
+      </div> -->
+
+      <!-- <h6  class="text-center"><b>Llauri Drogo</b></h6>
       <div class="progress mb-5" style="height: 20px;">
         <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><small>10%</small></div>
-      </div>
+      </div> -->
+
       <hr>
       <div class="text-center">
         <p class="mt-2">Reporte</p>
-        <button type="button" class="btn btn-outline-danger btn-sm ml-2">PDF</button>
-        <button type="button" class="btn btn-outline-success btn-sm ml-2">EXCEL</button>
+        <button type="button" class="btn btn-outline-danger btn-sm ml-2"  (click)="downloadPDF()">PDF</button>
+        <button type="button" class="btn btn-outline-info btn-sm ml-2" (click)="exportarVotantes()">RELACION VOTANTES</button>
+        <button type="button" class="btn btn-outline-success btn-sm ml-2" (click)="ExportToExcel()">RELACION CANDIDATOS</button>
       </div>
-      <table class="table table-hover mt-4">
-        <thead>
-          <th>#</th>
-          <th>Candidato</th>
-          <th># votos</th>
-          <th>% votos</th>
+      <table class="table table-hover mt-4 my-tbody" #tablaTotal>
+        <thead class="text-center">
+          <tr>
+            <th>N°</th>
+            <th>Candidato</th>
+            <th>Votos</th>
+            <th>Porcentaje</th>
+        </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Aderson Jara</td>
-            <td>500</td>
-            <td>50%</td>
+        <tbody class="text-center">
+          <tr *ngFor="let item of lstData; index as i">
+            <td>{{i+1}}</td>
+            <td style="max-width:220px; white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">{{item.nombre}}</td>
+            <td>{{item.votantes_count}}</td>
+            <td t="s">{{ (item.votantes_count /total_votantes) * 100 | number : '1.2-2'}}%</td>
           </tr>
           <tr>
-            <td>2</td>
-            <td>Diego Corales</td>
-            <td>250</td>
-            <td>25%</td>
+            <td colspan="3">TOTAL DE PERSONAS QUE VOTARON</td>
+            <td>{{total_per_vot}}</td>
           </tr>
           <tr>
-            <td>3</td>
-            <td>Llauri Drogo</td>
-            <td>10</td>
-            <td>10%</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Aderson Jara</td>
-            <td>500</td>
-            <td>50%</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Diego Corales</td>
-            <td>250</td>
-            <td>25%</td>
-          </tr>
-          <tr>
-            <td>...102</td>
-            <td>Llauri Drogo</td>
-            <td>10</td>
-            <td>10%</td>
+            <td colspan="3">TOTAL DE PERSONAS QUE NO VOTARON</td>
+            <td>{{total_per_no_vot}}</td>
           </tr>
         </tbody>
       </table>
+
+      <div class="row" style="display: none;">
+        <div  id="pdfTable" #pdfTable class="text-center">
+          <h2>REPORTE DE RESULTADOS VOTACIONES</h2>
+          <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
+          <h5>El ganador de las elecciones es: </h5>
+          <p>{{nombre_ganador}}</p>
+          <p>{{votos_ganador}} votos</p>
+
+          <table class="table table-bordered mt-4">
+            <div *ngFor="let item of lstPartidoCandidato">
+            <tr class="table-primary text-center">
+              <td colspan="3"><b>{{item.nombre}}</b></td>
+            </tr>
+            <tr *ngFor="let candidato of item.candidatos; index as i">
+              <td style="width: 60%;background-color: darkgray;">{{i+1}}</td>
+              <td>{{candidato.nombre}}</td>
+              <!-- <td style="width: 10%;" class="text-center">{{candidato.votantes_count}}</td> -->
+              <td>{{candidato.votantes_count}} ({{ (candidato.votantes_count /total_votantes) * 100 | number : '1.2-2'}}%)</td>
+            </tr>
+          </div>
+          </table>
+        </div>
+      </div>
+
     </div>
   </section>
 </div>
