--- a/src/app/votacion/views/home.component.html
+++ b/src/app/votacion/views/home.component.html
@@ -3,7 +3,7 @@
     <div class="container text-white">
       <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
       <h4>SISTEMA DE VOTACIONES ONLINE</h4>
-      <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir sin votar</button>
+      <!-- <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir sin votar</button> -->
     </div>
   </section>
   <ul class="indicaciones-voto mb-4">
