--- a/src/app/admin/auth/auth.component.html
+++ b/src/app/admin/auth/auth.component.html
@@ -26,7 +26,7 @@
                 <input type="password" class="form-control" formControlName="password" placeholder="contraseña">
               </div>
             </div>
-            <button class="btn btn-primary btn-block" type="submit" [disabled]="loginForm.invalid">Entrar</button>
+            <button class="btn btn-primary btn-block" type="submit">Entrar</button>
           </form>
         </div>
       </div>
