--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -34,9 +34,9 @@
       <hr>
       <div class="text-center">
         <p class="mt-2">Reporte</p>
-        <button type="button" class="btn btn-outline-danger btn-sm ml-2"  (click)="downloadPDF()">PDF</button>
-        <button type="button" class="btn btn-outline-info btn-sm ml-2" (click)="exportarVotantes()">RELACION VOTANTES</button>
-        <button type="button" class="btn btn-outline-success btn-sm ml-2" (click)="ExportToExcel()">RELACION CANDIDATOS</button>
+        <button type="button" class="btn btn-outline-danger btn-sm ml-2"  (click)="downloadPDF()">REPORTE PDF</button>
+        <!-- <button type="button" class="btn btn-outline-info btn-sm ml-2" (click)="exportarVotantes()">RELACION VOTANTES</button> -->
+        <button type="button" class="btn btn-outline-success btn-sm ml-2" (click)="ExportToExcel()">REPORTE EXCEL</button>
       </div>
       <table class="table table-hover mt-4 my-tbody" #tablaTotal>
         <thead class="text-center">
