--- a/src/app/votacion/views/home.component.html
+++ b/src/app/votacion/views/home.component.html
@@ -1,11 +1,10 @@
-<div class="container">
   <section class="jumbotron text-center">
     <div class="container text-white">
-      <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
-      <h4>SISTEMA DE VOTACIONES ONLINE</h4>
-      <button type="button" class="btn btn-light btn-sm mt-3" (click)="onLogout()">Salir sin votar</button>
+      <img src="assets/img/banner.png" alt="" class="img-fluid">
+      <button type="button" class="btn btn-dark btn-sm mt-3 d-block mx-auto" (click)="onLogout()">Salir sin votar</button>
     </div>
   </section>
+<div class="container">
   <ul class="indicaciones-voto mb-4">
     <li type="square">Clic en el nombre del Partido Político o en <small><i class="fa fa-plus-square" aria-hidden="true"></i></small>
      para ver sus candidatos.</li>
