--- a/src/app/votacion/votacion-online/votacion-online.component.html
+++ b/src/app/votacion/votacion-online/votacion-online.component.html
@@ -1,14 +1,15 @@
 <section class="jumbotron text-center">
   <div class="container text-white">
-    <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
-    <h4>SISTEMA DE VOTACIONES ONLINE</h4>
+    <img src="assets/img/banner.png" alt="" class="img-fluid">
+    <!-- <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
+    <h4>SISTEMA DE VOTACIONES ONLINE</h4> -->
   </div>
 </section>
 <div class="container">
   <div class="row justify-content-sm-center">
     <div class="col-sm-6 col-md-4">
       <div class="card shadow">
-        <div class="card-body py-5">
+        <div class="card-body py-4">
           <form id="loginform">
             <div class="form-group text-center">
               <label class="texto-v mb-4" for="inlineFormInputGroup">Ingrese su DNI</label>
@@ -17,6 +18,16 @@
                   <div class="input-group-text">DNI</div>
                 </div>
                 <input type="text" class="form-control" (keypress)="onlyNumberKey($event)" maxlength="8" placeholder="" [formControl]="dni">
+              </div>
+              <div class="input-group mb-2">
+                <select class="custom-select cargos">
+                  <option selected>Elija su Cargo Ocupacional</option>
+                  <option value="1">Enfermero (a)</option>
+                  <option value="2">Obstetriz</option>
+                  <option value="3">Cirujano Dentista</option>
+                  <option value="4">Médico I</option>
+                  <option value="5">Tec. Laboratorio I</option>
+                </select>
               </div>
             </div>
             <button class="btn btn-primary btn-block" (click)="onVotar()">Entrar</button>
