--- a/src/app/admin/auth/auth.component.html
+++ b/src/app/admin/auth/auth.component.html
@@ -1,7 +1,6 @@
 <section class="jumbotron text-center">
   <div class="container text-white">
-    <h2>TRIBUNAL ELECTORAL DEL SECTOR SALUD</h2>
-    <h4>SISTEMA DE VOTACIONES ONLINE</h4>
+    <img src="assets/img/banner.png" alt="" class="img-fluid">
   </div>
 </section>
 <div class="container">
